# video

./: .gitignore  .gitmodules  Architecture.md  README.md  capture-bracket.scad  case-lock.scad  ether-barcket.stl  ether-bracket-version3.scad  ether-bracket.scad  usb-c-bracket.scad  usbc-bracket-front.scad  usbc-bracket.scad  usbc-bracket.stl  vocto.dot  vocto_all.dot  washer.scad  web.html
.circleci/: config.yml
Instructions/: TODO
Instructions/Sources/: FOSDEM_AV_manual.tex
graph/: audio_large.dot  audio_small.dot  audio_xxl.dot  cabling_large_rooms.dot  cabling_small_rooms.dot  cabling_xxl_rooms.dot  fosdem-video-2017.vsd  fosdem2021_video_setup.dot  overview.drawio  update_cabling_diagrams.sh  vocto.dot  vocto_all.dot  web.html
hardware/: README.md  case-lock.scad
hardware/assembly/: README.md  assembly.dot  build.sh  sweatshop.md
hardware/baseplate/: audio_board.scad  baseplate.scad  case.scad  display.scad  hdmi.scad  nuts.scad  onlyfans.scad  power_board.scad  radxa_x2l.scad  radxa_x4.scad  switch_board.scad
hardware/baseplate/pcb_3dmodels/: .gitignore  Makefile
hardware/brackets/: cable-holder.scad  capture-adapter-hagibis.scad  capture-bracket.scad  ether-bracket.scad  onlyfans-baseplate.scad  onlyfans.scad  screen.scad  standoffs-hagibi.scad
hardware/brackets/modules/: rcube.scad
hardware/ethernet/: realtek-switch-status.ino
hardware/firmware/audio_board/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  channels.h  deploy.sh  display.cpp  display.h  flash.sh  format.sh  helpers.cpp  helpers.h  main.cpp  storage.cpp  storage.h  teensy4_usb_descriptor.c  teensyaudio.cpp  teensyaudio.h
hardware/firmware/audio_board/.builds/: firmware.yml
hardware/firmware/audio_board/helpers/: generate_mutes.py
hardware/firmware/audio_board/src/: channels.cpp  channels.h  config.h  db_conversion.cpp  db_conversion.h  debug.cpp  debug.h  display.cpp  display.h  helpers.cpp  helpers.h  main.cpp  storage.cpp  storage.h  taa3040.cpp  taa3040.h  teensyaudio.cpp  teensyaudio.h  teensyaudio_defaults.cpp  teensyaudio_generated.cpp  types.h
hardware/firmware/audio_board/src/cli/: cli.cpp  cli.h  commands.cpp
hardware/firmware/box_rp2040/: CMakeLists.txt  build.sh  deploy.sh  flash.sh
hardware/firmware/box_rp2040/src/: CMakeLists.txt  colour_schemes.h  config.h  display.c  display.h  io.c  io.h  io_commands.c  io_commands.h  main.c  network_switch_status_reader.c  usb.c  usb.h
hardware/firmware/box_rp2040/src/display/: colour_schemes.c  display.c  display.h
hardware/firmware/box_rp2040/src/io/: commands.c  commands.h  serial.c  serial.h  utils.c  utils.h
hardware/firmware/box_rp2040/src/network_switch/: README.md  network_switch_status_reader.c  network_switch_status_reader.h
hardware/firmware/box_rp2040/src/pwr_brd_ctl/: fan_ctl.c  fan_ctl.h  fan_ctl_regs.h  pwr_brd_ctl.c  pwr_brd_ctl.h
hardware/firmware/box_rp2040/src/text/: CMakeLists.txt  mf_config.h
hardware/firmware/box_rp2040/src/usb/: tusb_config.h  usb.c  usb.h  usb_descriptors.c
hardware/firmware/capture_board/: ms2131_fw.hexpat
hardware/firmware/tools/: audio_crashreport.py  dump_image.py  flash_audio_board_firmware.sh  flash_rp2040_firmware.sh  osc_control.py
hardware/firmware/udev_rules/: 20-fosdem-serial.rules
hardware/frontplate/: README.md  combine.py  generate.sh
hardware/pcbs/: .gitignore
hardware/pcbs/audio_board/: Parts.kicad_sym  README.md  adc.kicad_sch  audio_board.kicad_pcb  audio_board.kicad_pro  audio_board.kicad_sch  codec.kicad_sch  dac.kicad_sch  dect.kicad_sch  fp-lib-table  input_balanced.kicad_sch  input_mono.kicad_sch  (+5 more)
hardware/screenbracket/: screenbracket-2.FCStd  screenbracket-producton-mirror.stl  screenbracket-producton.stl  screenbracket-simplified.FCStd  screenbracket.FCStd  screenbracket.FCStd1
hardware/wiring/: .gitignore  README.md  wiring.txt  wiring.yml
instructions/: FOSDEM_AV_manual.epub  TODO  flight_cases_content.md  mpv_cycle  q_event.txt  update-private-files.sh
instructions/fosdem2021/: speakers.md  staff.md  videostaff.md
instructions/fosdem2022/: speakers.md  staff.md  videostaff.md
instructions/fosdem2024/: speakers.md
instructions/sources/: FOSDEM_AV_manual.tex  FOSDEM_AV_manual.typ  FOSDEM_Devroom_camera_manual.md  FOSDEM_Devroom_manual.md  FOSDEM_Room_setup_checklist.md  FOSDEM_Room_setup_checklist.typ  FOSDEM_Room_setup_checklist_template.md  Makefile  README.md  logo-gear.eps  makedep.sh  mkplaintext.sh  populate-devroom-setup-checklist.sh  pregen.sh  room_info.json  rooms  tmpl.my
modules/: letter.scad  standembracer.scad
obsolete/: ether-bracket-version2.FCStd  ether-bracket.FCStd
software/: .gitignore  README.md  ansible.cfg  ansible_inventory  dhcpdgen.sh  partitions.sfdisk  prepare_boxes.yml  prepare_sd.sh  remote_update_boxes.yml  stats.pl  update_sd.sh
software/2021/: create_interroll.sh  durations.sh
software/FBBoot/: boot.cmd  boot.scr
software/activitypub/: README.md  fosdem.markvdb.be  fosdem_parse.py  keygen.py  server.py
software/ansible/: README.md
software/audioctl/: .golangci.yaml  Makefile  README.md  TODO.md  build.sh  example_config.yaml  go.mod  go.sum
software/audioctl_ui/: Makefile  README.md  TODO.md  build.sh  eslint.config.ts  generate_changelog.sh  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
software/audiomixer/: .gitignore  README.md
software/audiomixer/mixercontrol/cli/: osc_cli.py  pyproject.toml  requirements.txt
software/grafana/: ebur-gauges.json  ebur-graphs.json  ebur-preserved.json  ebur.json
software/hosts/: boxes  dhcpdgen.sh  gen-a-records.sh  gen-ptr-records.sh  voctops
software/lcdstatus/: README.md  status.py
software/livestream/: README.md  composer.json  fetch-template.php
software/marcel/: TODO.md
software/monitor/: mon.sh
software/mpvwrap/: mpvwrap
software/processdump/: README.md  create_json.py  split_video.py  welcome-to-fosdem.json
software/utils/: get_resolutions.sh  screenmodes.sh  xorg_switch_res.sh
software/voc_grid/: README.md  config.sh  run.sh
(+203 files in other folders)
