[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fosdem-audio-cli"
description = "FOSDEM Audio Control CLI"
version = "0.0.1"

dependencies = [
    "click",
    "click-repl",
    "tabulate",
    "pyserial",
    "python-osc",
    "auto-click-auto",
]
